tests/fixtures/malformed/incomplete_plan.txt
Terraform used the selected providers to generate the following execution plan. Resource actions are indicated with the following symbols:
  + create
  ~ update in-place

Terraform will perform the following actions:

  # aws_s3_bucket.incomplete will be created
  + resource "aws_s3_bucket" "incomplete" {
      + arn                         = (known after apply)
      + bucket                      = "incomplete-bucket"
      + id                          = (known after apply)
      + tags                        = {
          + "Environment" = "test"

ERROR: The terraform plan output was truncated due to terminal limitations.
Please increase your terminal buffer size or use the -out flag to save to a file.

Incomplete output detected...